--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,7 +207,7 @@ p {
 /* ==================== */
 
 .container {
-  width: 50vw;
+  width: 65vw;
   max-width: 100vw;
   margin-inline: auto;
   padding-inline: var(--space-md);
@@ -780,7 +780,7 @@ input:focus+.toggle-slider {
 .alert {
   padding: var(--space-md) var(--space-lg);
   border-radius: var(--radius-md);
-  margin-bottom: var(--space-md);
+  margin: var(--space-lg) 0;
   border-left: 4px solid;
 }
 
